# cpp-tutorial

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
apps/: CMakeLists.txt
apps/calc_app/: CMakeLists.txt
apps/calc_app/include/: app.hpp
apps/calc_app/src/: main.cpp
apps/func_example/: CMakeLists.txt
apps/func_example/include/: app.hpp
apps/func_example/src/: main.cpp
apps/integral_app/: CMakeLists.txt
apps/integral_app/include/: app.hpp
apps/integral_app/src/: main.cpp
apps/oop/: CMakeLists.txt
apps/oop/bank/: CMakeLists.txt
apps/oop/bank/include/: app.hpp
apps/oop/bank/src/: main.cpp
apps/oop/geometry2d/: CMakeLists.txt
apps/oop/geometry2d/include/: app.hpp
apps/oop/geometry2d/src/: main.cpp
apps/oop/principles/: CMakeLists.txt
apps/oop/principles/include/: address.hpp  bank.hpp  bank_office.hpp  client.hpp  country_validator.hpp  (+1 more)
apps/oop/smart_ptr/: CMakeLists.txt
libs/: CMakeLists.txt
libs/bank/: CMakeLists.txt
libs/bank/include/: address.hpp  bank_group.hpp  client.hpp
libs/bank/src/: bank_group.cpp
libs/expression_calc/: CMakeLists.txt
libs/expression_calc/include/: expression_calc.hpp  expression_validator.hpp
libs/expression_calc/src/: expression_calc.cpp  expression_validator.cpp
libs/geometry2d/: CMakeLists.txt
libs/geometry2d/include/: circle.hpp  drawer.hpp  ellipse.hpp  geometry2d.hpp  rectangle.hpp  shape2d.hpp  square.hpp
libs/geometry2d/src/: geometry2d.cpp
libs/integral/: CMakeLists.txt
libs/integral/include/: integral.hpp
libs/integral/src/: integral.cpp
(+4 files in other folders)
